Fixed buttons on mobile display

--- a/app/assets/stylesheets/pages/_home.scss
+++ b/app/assets/stylesheets/pages/_home.scss
@@ -63,7 +63,8 @@
 
   .btn-container-homepage-mobile {
     display: flex;
-    padding: 80vh 4vw;
+    margin-top: 80vh;
+    padding: 4vw;
       .btn-homepage {
         flex-grow: 1;
         margin-right: 16px;
